--- a/notification/templates/notification/notice_settings.html
+++ b/notification/templates/notification/notice_settings.html
@@ -1,13 +1,12 @@
 {% extends "notification/base.html" %}
-
 {% load i18n %}
-{% load url from future %}
 
 {% block body_id %}notification-settings{% endblock %}
 
 {% block head_title %}{% trans "Notification Settings" %}{% endblock %}
 
 {% block body %}
+{{ block.super }}
     <h2>{% trans "Notification Settings" %}</h2>
 
     {% url "account_settings" as email_url %}
